testsuite/tests/typecheck/should_fail/T17594d.stderr

T17594d.hs:8:5: error: [GHC-14964]
    • Invisible type pattern t has no associated forall
    • In an equation for ‘id'’: id' @t x = x :: t
